--- a/index.html
+++ b/index.html
@@ -127,13 +127,13 @@
 				<div class="col-md-4 about-right w3-agileits wow slideInRight animated" data-wow-delay=".5s">
 					<h4>我们是五四五医院</h4>
 					<ul>
-						<li><span class="glyphicon glyphicon-menu-right"></span>专业制造精神病</li>
-						<li><span class="glyphicon glyphicon-menu-right"></span>不疯不收钱</li>
-						<li><span class="glyphicon glyphicon-menu-right"></span>现在起，拉拢一个精神病来我院，即可享受骨折优惠！</li>
-						<li><span class="glyphicon glyphicon-menu-right"></span>优质服务，值得姓赖！</li>
-						<li><span class="glyphicon glyphicon-menu-right"></span>详情请进院咨询</li>
-						<li><span class="glyphicon glyphicon-menu-right"></span>.........</li>
-						<li><span class="glyphicon glyphicon-menu-right"></span>.........</li>
+						<li><span class="glyphicon glyphicon-menu-right"></span>我们不是医生，</li>
+						<li><span class="glyphicon glyphicon-menu-right"></span>我们偏爱自嘲</li>
+						<li><span class="glyphicon glyphicon-menu-right"></span>我们只是一群伙伴</li>
+						<li><span class="glyphicon glyphicon-menu-right"></span>一群......</li>
+					     <h5><li><span class="glyphicon glyphicon-menu-right"></span>乐观的疯子。</li></h5>
+						<li><span class="glyphicon glyphicon-menu-right"></span>whatever，</li>
+						<li><span class="glyphicon glyphicon-menu-right"></span>545forever！</li>
 						<li><span class="glyphicon glyphicon-menu-right"></span>.........</li>
 					</ul>
 			  </div>
@@ -576,6 +576,7 @@
 		</div>
 		<!-- //container -->
 	</div>
+	<a target="_blank" href="//shang.qq.com/wpa/qunwpa?idkey=af8e1c20d8faddf3eb631b996c5b123b35d5c20711e166670dfe4168e5e1a1ec"><img border="0" src="//pub.idqqimg.com/wpa/images/group.png" alt="545医院" title="545医院"></a>
 	<!-- //testimonial --> 
 	<!-- contact --><!-- //contact -->	
 	<!-- footer --><!-- //footer -->
