--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
 						<li><span class="glyphicon glyphicon-menu-right"></span>我们偏爱自嘲</li>
 						<li><span class="glyphicon glyphicon-menu-right"></span>我们只是一群伙伴</li>
 						<li><span class="glyphicon glyphicon-menu-right"></span>一群......</li>
-					     <h5><li><span class="glyphicon glyphicon-menu-right"></span>乐观的疯子。</li></h5>
+					     <i><h4><li><span class="glyphicon glyphicon-menu-right"></span>乐观的疯子。</li></h4></i>
 						<li><span class="glyphicon glyphicon-menu-right"></span>whatever，</li>
 						<li><span class="glyphicon glyphicon-menu-right"></span>545forever！</li>
 						<li><span class="glyphicon glyphicon-menu-right"></span>.........</li>
@@ -173,7 +173,7 @@
 				<div class="col-md-3 col-sm-3 col-xs-6 services-agile-grid">
 					<span class="glyphicon glyphicon-bookmark wthree-effect" aria-hidden="true"></span>
 					<div class="services-text">
-						<h5 class="w3-agile-counter">0</h5> 
+						<h5 class="w3-agile-counter">25782257</h5> 
 						<p>成功医治</p>
 					</div>
 				</div>
