--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
 						<li><span class="glyphicon glyphicon-menu-right"></span>我们偏爱自嘲</li>
 						<li><span class="glyphicon glyphicon-menu-right"></span>我们只是一群伙伴</li>
 						<li><span class="glyphicon glyphicon-menu-right"></span>一群......</li>
-					     <i><h4><li><span class="glyphicon glyphicon-menu-right"></span>乐观的疯子。</li></h4></i>
+					     <h4><li><span class="glyphicon glyphicon-menu-right"></span>乐观的疯子。</li></h4>
 						<li><span class="glyphicon glyphicon-menu-right"></span>whatever，</li>
 						<li><span class="glyphicon glyphicon-menu-right"></span>545forever！</li>
 						<li><span class="glyphicon glyphicon-menu-right"></span>.........</li>
