--- a/index.html
+++ b/index.html
@@ -243,7 +243,7 @@
 						</div>
 					</div>
 					<h4>郭欢</h4>
-					<p>我们院的整形科有多好？看看她的腿吧</p>
+					<p>名誉院长，怎么样，好看吧<del>不好意思放错图了</del></p>
 				</div>						
 				<div class="col-md-3 team-grids wow zoomIn animated" data-wow-delay=".5s">
 					<img class="img-responsive" src="images/yl.jpg" alt="">
